--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=pet-service
 spring.config.import=optional:configserver:http://localhost:8888/
 management.endpoints.web.exposure.include=*
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+feign.circuitbreaker.enabled=true
